--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <body>
-<p>Hello, tune in later for more</p>
+<h1>Pamela Spark</h1>
 
-<p>- Pamela Spark</p>
+<p>Pamela Spark is a multimedia artist and live coder; <a href="https://toplap.org/about/">live code</a>
+    that exposes the innards of software as it changes to create improvised music or visuals.
+    She performs as a live coder in Philadelphia with the multimedia art collective
+    <a href="https://phillyav.club">Philly AV</a>, as part of the live code band <a href="https://catfans.github.io/">CatFans</a>,
+    as well as performing solo, and organized the first 
+    <a href="https://thewebivore.com/algorave-and-learning-with-livecode-nyc/">"algorave" in Philadelphia in 2018</a>.
+    In 2020, she released her first EP as
+    <a href="https://open.spotify.com/album/2S2yL454Shv4zf5oWwjH5p">Pam the Webivore</a>,
+    and her music was featured in the Women of React and Oxidize online conferences.</p>
 </body>
